# koneko_core

./: pyproject.toml
src/koneko_core/: __init__.py
tests/: test_.py
