[project]
name = "koneko-core"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.3",
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "anyio>=4.4.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.pytest.ini_options]
addopts = "--cov=src/koneko_core --cov-report html"

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"
pythonVersion = "3.12"

[tool.coverage.run]
branch = true
